--- a/index.html
+++ b/index.html
@@ -6,45 +6,50 @@
     <title>Page Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="./src/index.js"></script>
-    <!-- <script src="./src/index1.js"></script> -->
-    <!-- <script src="http://src.com/index1.js"></script> -->
     <script src="https://cdn.bootcss.com/jquery/3.2.0/jquery.js"></script>
 </head>
 <body>
-    
+    <a data-url='aUrl' data-src='aSrc'>a链接点击</a>
+    <div>
+            <div data-url='divUrl' data-src='divSrc'>div链接点击</div>
+            <a data-url='aUrl' data-src='aSrc'>a链接点击</a>
+            <a data-url='aUrl' data-src='aSrc'>a链接点击</a>
+    </div>
+    <div data-url='divUrl' data-src='divSrc'>div链接点击</div>
 </body>
+
 <script>
-    let nekyError = nekyErr({ 
-        url: 'http://localhost:8800/pwa', //接收报错信息地址
-        method: 'GET', //请求类型 POST/GET 默认为POST 大写，如果写错了，自动使用POST
-        isSampling: false, //是否采样，错误信息会存储在本地，同样的错误不会多次发送请求 true / false 默认为true
-        addErrData: {}, //附加的数据，该数据会与报错信息一起传给后端，可用于记录一些业务数据
+    let nekyRet = nekyEeport.init({ 
+        url: 'http://www.dev.7atour.com/testimg/zc.gif',
+        isClick: false,
+        clickAttr: {
+            dom: ['a', 'div'],
+            attr: [{
+                objKey: 'objectId',
+                attrKey: 'data-url',
+                tag: 'a'
+            },{
+                objKey: 'objectId1',
+                attrKey: 'data-shop',
+                tag: 'a'
+            },{
+                objKey: 'productId',
+                attrKey: 'data-src',
+                tag: 'a'
+            },{
+                objKey: 'objectId',
+                attrKey: 'data-url',
+                tag: 'div'
+            }]
+        }
+    })
+    nekyRet.watchApi('a', function (data) {
+        console.log('a')
+        console.log(data)
     })
     $.ajax({
-		url: 'https://cdn.bootcss.com/jquery/3.2.01/jquery.js',
-		type: 'GET',
+		type:'post',
+        url:'/api/searchProductCondition',
 	})
-	.done(function() {
-		console.log("success");
-	})
-	.fail(function(error) {
-        console.log(error)
-		console.log("error");
-	})
-	.always(function() {
-		console.log("complete");
-    });
-    try {
-        throw new Error('can not find it2');
-    } catch (err) {
-        nekyError.error(err)
-    }
-    let p = Promise.reject(new Error('throw error'));
-    setTimeout(()=>{
-        p.catch(e=>{console.log(1)});
-    },1000);
-
-    throw new Error("出错了！");
-    
 </script>
 </html>
